@@ -66,7 +66,7 @@ public class Spell {
 	}
 
 	public boolean isEmpty() {
-		return groups.isEmpty() || groups.get(0).isEmpty();
+		return groups.isEmpty() || groups.getFirst().isEmpty();
 	}
 
 	public Weight getWeight() {
@@ -133,7 +133,7 @@ public class Spell {
 		}
 
 		// start casting the spell
-		SpellGroup firstGroup = groups.get(0);
-		firstGroup.shape().cast(caster, caster.position(), null, world, stack, firstGroup.effects(), groups, 0, caster.getAttributeValue(ArcanusEntityAttributes.SPELL_POTENCY.get()));
+		SpellGroup firstGroup = groups.getFirst();
+		firstGroup.shape().cast(caster, caster.position(), null, world, stack, firstGroup.effects(), groups, 0, caster.getAttributeValue(ArcanusEntityAttributes.SPELL_POTENCY.holder()));
 	}
 }
